// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`block tests correctly generate patches from two blocks should add fields on the new fields added and remove it in the undo 1`] = `
Array [
  Object {
    "deletedFields": Array [],
    "updatedFields": Object {
      "newField": "new field",
    },
  },
  Object {
    "deletedFields": Array [
      "newField",
    ],
    "updatedFields": Object {},
  },
]
`;

exports[`block tests correctly generate patches from two blocks should generate two empty patches for the same block 1`] = `
Array [
  Object {
    "deletedFields": Array [],
    "updatedFields": Object {},
  },
  Object {
    "deletedFields": Array [],
    "updatedFields": Object {},
  },
]
`;

exports[`block tests correctly generate patches from two blocks should remove field on the new block added and add it again in the undo 1`] = `
Array [
  Object {
    "deletedFields": Array [
      "test",
    ],
    "updatedFields": Object {},
  },
  Object {
    "deletedFields": Array [],
    "updatedFields": Object {
      "test": "test",
    },
  },
]
`;

exports[`block tests correctly generate patches from two blocks should update propertie on the main object and revert it back on the undo 1`] = `
Array [
  Object {
    "deletedFields": Array [],
    "parentId": "new-parent-id",
    "updatedFields": Object {},
  },
  Object {
    "deletedFields": Array [],
    "parentId": "old-parent-id",
    "updatedFields": Object {},
  },
]
`;
